# audit-agent-env

audit-agent-env/: .gitignore  Audit-Hackathon.docx  Dockerfile  README copy.md  README.md  README_SUBMIT.md  README_V2.md  audit_agent_env.py  core.py  data_loader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
audit-agent-env/data/: invoice.xlsx  ledger.xlsx
audit-agent-env/server/: app.py
